--- a/pages/home.HTML
+++ b/pages/home.HTML
@@ -3,52 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>japâo</title>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <title>Japão - Um País de Contrastes</title>
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
     <header>
-        <div class="viva-brasil">
-            <a href="./home.html">
-                <img src="./assets/Viva Brasil 1.png" alt="Bandeira do Brasil">
-                <span>Japão</span>
-            </a>
+        <div class="logo">
+            <img src="../japan-flag-uhd-4k-wallpaper.jpg" alt="Bandeira do Japão">
         </div>
-
         <nav>
             <ul>
-                <li>
-                    <a href="./home.html">Home</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="./pages/historia.html">História</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="./pages/cultura.html">Cultura</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="./pages/pontosturisticos.html">Pontos Turísticos</a>
-                </li>
+                <li><a href="./home.HTML" class="active">Home</a></li>
+                <li><a href="#">História</a></li>
+                <li><a href="#">Cultura</a></li>
+                <li><a href="#">Pontos Turísticos</a></li>
             </ul>
         </nav>
     </header>
 
-        <main>
-            <h1>Japão</h1>
-            <p>“Uma Cultura Adora no Mundo”</p>
-
-            <a href="./pages/historia.html">Próximo</a>
-        </main>
-
-        <img class="bandeira" src="" alt="">
+    <main>
+        <h1>Japão</h1>
+        <div class="content">
+            <div class="description">
+                <h2>Um País de Contrastes</h2>
+                <p>O Japão é uma terra onde a tradição milenar se mistura com a inovação tecnológica. De templos antigos a arranha-céus futuristas, o país oferece uma fusão única de história e modernidade, encantando visitantes com sua rica cultura, gastronomia e hospitalidade.</p>
+                <button onclick="location.href='#'">História</button>
+            </div>
+            <div class="flag-window">
+                <div class="window-bar">
+                </div>
+                <div class="flag">
+                    <img src="../Screenshot 07_11_2024 22_23_07.png" alt="Bandeira do Japão">
+                </div>
+            </div>
+        </div>
+        
+    </main>
 </body>
 </html>
