--- a/pages/home.HTML
+++ b/pages/home.HTML
@@ -25,7 +25,13 @@
     </header>
 
     <main>
+        <div class="tudo">
+        <div class="topo">
         <h1>Japão</h1>
+        <div class="flag">
+            <img src="../Screenshot 07_11_2024 22_23_07.png" alt="Bandeira" class="Bandeira">
+        </div>
+    </div>
         <div class="content">
             <div class="description">
                 <h2>Um País de Contrastes</h2>
@@ -35,12 +41,10 @@
             <div class="flag-window">
                 <div class="window-bar">
                 </div>
-                <div class="flag">
-                    <img src="../Screenshot 07_11_2024 22_23_07.png" alt="Bandeira do Japão">
-                </div>
+                
             </div>
         </div>
-        
+    </div>
     </main>
 </body>
 </html>
