--- a/pages/index.html
+++ b/pages/index.html
@@ -16,8 +16,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./home.HTML" class="active">Home</a></li>
-                <li><a href="#">História</a></li>
+                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="./historia.HTML">História</a></li>
                 <li><a href="#">Cultura</a></li>
                 <li><a href="#">Pontos Turísticos</a></li>
             </ul>
@@ -35,8 +35,15 @@
             <div class="description">
                 <h2>Um País de Contrastes</h2>
                 <p>O Japão é uma terra onde a tradição milenar se mistura com a inovação tecnológica. De templos antigos a arranha-céus futuristas, o país oferece uma fusão única de história e modernidade, encantando visitantes com sua rica cultura, gastronomia e hospitalidade.</p>
-                <a href="">Historia</a>
+              <nav>
+                <ul>
+                  <li>
+                    <a href="./historia.HTML">História</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
+
             <div class="flag-window">
                 <div class="window-bar">
                 </div>
