começo da pagina cultura

--- a/pages/home.HTML
+++ b/pages/home.HTML
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="./home.HTML" class="active">Home</a></li>
                 <li><a href="./historia.HTML">História</a></li>
-                <li><a href="#">Cultura</a></li>
+                <li><a href="./Cultura.HTML">Cultura</a></li>
                 <li><a href="#">Pontos Turísticos</a></li>
             </ul>
         </nav>
