--- a/pages/Cultura.HTML
+++ b/pages/Cultura.HTML
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Japão - Um País de Contrastes</title>
-    <link rel="stylesheet" href="../css/historia.css">
+    <link rel="stylesheet" href="../css/Cultura.css">
 </head>
 <body>
     <header>
@@ -18,18 +18,14 @@
             <ul>
                 <li><a href="./home.HTML">Home</a></li>
                 <li><a href="./historia.HTML" class="active">História</a></li>
-                <li><a href="./Cultura.HTML">Cultura</a></li>
+                <li><a href="#">Cultura</a></li>
                 <li><a href="#">Pontos Turísticos</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <div class="tudo">
-        <div class="topo">
+    <div class="tudo">
         <h1>História</h1>
-        
-    </div>
         <div class="content">
             
             <div class="description">
@@ -38,7 +34,7 @@
               <nav>
                 <ul>
                   <li>
-                    <a href="./Cultura.HTML">Cultura</a>
+                    <a href="">Pontos-Turísticos</a>
                   </li>
                 </ul>
               </nav>
