ultimo commit, AMÉM JESUS

--- a/pages/Cultura.HTML
+++ b/pages/Cultura.HTML
@@ -16,37 +16,40 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./home.HTML">Home</a></li>
-                <li><a href="./historia.HTML" class="active">História</a></li>
-                <li><a href="#">Cultura</a></li>
-                <li><a href="#">Pontos Turísticos</a></li>
+                <li><a href="./index.HTML">Home</a></li>
+                <li><a href="./historia.HTML">História</a></li>
+                <li><a href="Cultura.HTML" class="active">Cultura</a></li>
+                <li><a href="./Pontos.html">Pontos Turísticos</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="tudo">
-        <h1>História</h1>
-        <div class="content">
+
+        <div>
+          <h1>Cultura</h1>
+        </div>
+        <div class="conteudo">
             
             <div class="description">
-                <h2>História</h2>
-                <p>O Japão tem uma história rica e complexa que se estende por milênios. Sua civilização começou a se formar por volta de 10.000 a.C. com a cultura Jomon, seguida pela era Yayoi (300 a.C. – 300 d.C.), quando o cultivo de arroz e o uso de metal se popularizaram.</p>
+                <h2>Com uma cultura rica e diversificada, o Japão é conhecido por suas artes tradicionais, como o teatro Noh e a cerimônia do chá, além de sua cultura pop globalmente influente, como o anime e o mangá. </h2>
+                <p>A atenção aos detalhes e a estética minimalista são características marcantes de seus costumes.</p>
               <nav>
                 <ul>
                   <li>
-                    <a href="">Pontos-Turísticos</a>
+                    <a href="./Pontos.html">Pontos-Turísticos</a>
                   </li>
                 </ul>
               </nav>
             </div>
 
-            <div class="flag-window">
-                <div class="window-bar">
-                </div>
-                
+            <div class="images">
+                <img src="../judo.jpg" alt="judo" class="judo">
+                <img src="../comida.png" alt="comida"class="comida">
             </div>
-            <div class="flag">
-                <img src="../Captura de tela 2024-11-10 152215.png" alt="Bandeira" class="Bandeira">
+            <div class="imangens2">
+                <img src="../kimono.jpg" alt="roupa" class="kimono">
+                <img src="../anime.jpg" alt="anime" class="desenho">
             </div>
         </div>
     </div>
