--- a/pages/historia.HTML
+++ b/pages/historia.HTML
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./home.HTML">Home</a></li>
+                <li><a href="./index.HTML">Home</a></li>
                 <li><a href="./historia.HTML" class="active">História</a></li>
                 <li><a href="./Cultura.HTML">Cultura</a></li>
-                <li><a href="#">Pontos Turísticos</a></li>
+                <li><a href="./Pontos.html">Pontos Turísticos</a></li>
             </ul>
         </nav>
     </header>
